# feed-parrot

./: .gitignore  Cargo.toml  LICENSE-MIT  Makefile  README.md
doc/: Makefile  feed-parrot.1.scd
src/: categories.rs  config.rs  crawler.rs  db.rs  feed.rs  json_feed.rs  lib.rs  main.rs  mastodon.rs  models.rs  social_network.rs  twitter.rs
src/mastodon/: client.rs  extractor.rs  models.rs  valid_url.regex
