[package]
name = "feed-parrot"
version = "2.0.0"
authors = ["Wesley Moore <wes@wezm.net>"]
edition = "2021"

[dependencies]
atom_syndication = "0.12.4"
blake3 = "1.5.4"
chrono = { version = "0.4.38", features = ["serde", "now"] } # version compatible with rss and atom_syndication
egg-mode = { version = "0", default-features = false, features = ["hyper-rustls"], optional = true }
encoding = "0.2.33"
env_logger = "0.11.5"
eyre = "0.6.12"
getopts = "0"
log = "0.4"
mime = "0.3.17"
redb = "2.1.2"
reqwest = { version = "0.12.7", default-features = false, features = ["http2", "rustls-tls", "gzip", "json"] }
rmp-serde = "1.3.0"
rss = { version = "2.0.4", features = ["atom"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.3.17"
simple-eyre = "0.3.1"
tokio = { version = "1.0", features = ["rt-multi-thread", "time"] }
url = { version = "2.0", features = ["serde"] }
xhtmlchardet = "2.2.0"

[features]
default = []
twitter = ["egg-mode"]
